feat: enhance HTML report with nested scope rendering and parent references